@@ -1,3 +1,9 @@
+Tue Jun 19 20:00:43 2007  Lee Noar  <leenoar@sky.com>
+
+	* sys/_syslib.s(__main): Change below (r2667) did not solve
+	anything as it still uses the stack. Abandon using the stack
+	altogether and use only registers to receive data from crt1-riscos.
+
 Tue Jun 19 19:18:29 2007  Lee Noar  <leenoar@sky.com>
 
 	* sys/_syslib.s(__main): Receive the _init/_fini function ptrs
